--- a/app/src/main/res/layout/res_info_fragment2.xml
+++ b/app/src/main/res/layout/res_info_fragment2.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".restaurant.info.Res_info_fragment2">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +16,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical" >
 
                 <TextView
