--- a/app/src/main/res/layout/activity_rest_list_western_food.xml
+++ b/app/src/main/res/layout/activity_rest_list_western_food.xml
@@ -8,7 +8,7 @@
     tools:context=".restaurant.list.RestList_westernFood">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FFFFFF" />
