--- a/app/src/main/res/layout/menu_activity.xml
+++ b/app/src/main/res/layout/menu_activity.xml
@@ -9,7 +9,7 @@
     tools:context=".menu.MenuActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
