--- a/app/src/main/res/layout/review_recycle.xml
+++ b/app/src/main/res/layout/review_recycle.xml
@@ -30,7 +30,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
