--- a/app/src/main/res/layout/res_info_fragment1.xml
+++ b/app/src/main/res/layout/res_info_fragment1.xml
@@ -5,14 +5,14 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFFFFF"
+    android:orientation="vertical"
     tools:context=".restaurant.info.res_info_fragment1">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="match_parent">
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
