--- a/app/src/main/res/layout/res_list_activity.xml
+++ b/app/src/main/res/layout/res_list_activity.xml
@@ -232,7 +232,15 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center|top"
                 android:layout_marginTop="20dp"
-                android:background="#FFFFFF"></androidx.recyclerview.widget.RecyclerView>
+                android:background="#FFFFFF">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <TextView
+                android:id="@+id/ttvv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
 
 
         </LinearLayout>
