--- a/app/src/main/res/layout/restab_info_activity.xml
+++ b/app/src/main/res/layout/restab_info_activity.xml
@@ -1,103 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#ffffff"
+    android:orientation="vertical">
 
-    <ScrollView
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
-            <androidx.coordinatorlayout.widget.CoordinatorLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-                <com.google.android.material.appbar.AppBarLayout
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="202dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/image2" />
+
+                <TextView
+                    android:id="@+id/res_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#FFFFFF"
+                    android:fontFamily="@font/notosansbold"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/res_subtitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="-10dp"
                     android:background="#FFFFFF"
-                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                    android:fontFamily="@font/notosansbold"
+                    android:gravity="center"
+                    android:text="1번 테이블"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="15sp" />
+            </LinearLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                    <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="match_parent"
-                        android:layout_height="202dp"
-                        app:srcCompat="@drawable/image2" />
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            app:tabIndicatorColor="#ED6868"
+            app:tabSelectedTextColor="#ED6868"
+            tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.tabs.TabLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-                    <View
-                        android:id="@+id/view3"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
-                    <TextView
-                        android:id="@+id/res_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#FFFFFF"
-                        android:fontFamily="@font/notosansbold"
-                        android:gravity="center"
-                        android:textAlignment="center"
-                        android:textColor="#000000"
-                        android:textSize="24sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/res_subtitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="-10dp"
-                        android:background="#FFFFFF"
-                        android:fontFamily="@font/notosansbold"
-                        android:gravity="center"
-                        android:text="1번 테이블"
-                        android:textAlignment="center"
-                        android:textColor="#000000"
-                        android:textSize="15sp" />
-
-                    <View
-                        android:id="@+id/view"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/tabs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#F6B0B0"
-                        android:elevation="1dp"
-                        app:tabGravity="fill"
-                        app:tabMode="fixed"
-                        app:tabSelectedTextColor="#FFFFFF"
-                        app:tabTextColor="#FFFFFF"></com.google.android.material.tabs.TabLayout>
-
-                    <View
-                        android:id="@+id/view4"
-                        android:layout_width="match_parent"
-                        android:layout_height="10dp"
-                        android:background="#E8E3E3" />
-
-                    <FrameLayout
-                        android:id="@id/container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#FFFFFF"
-                        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-
-                    </FrameLayout>
-                </com.google.android.material.appbar.AppBarLayout>
-
-            </androidx.coordinatorlayout.widget.CoordinatorLayout>
-        </LinearLayout>
-    </ScrollView>
-
-
-</RelativeLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:ignore="SpeakableTextPresentCheck" />
+</LinearLayout>
