--- a/app/src/main/res/layout/restab_info_activity.xml
+++ b/app/src/main/res/layout/restab_info_activity.xml
@@ -11,25 +11,42 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:descendantFocusability="blocksDescendants">
-        <com.google.android.material.appbar.AppBarLayout
+
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/basket_button2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:backgroundTint="#ED6868"
+            android:fontFamily="@font/notosansbold"
+            app:icon="@drawable/basket"
+            app:iconTint="@color/white" />
+
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
             android:fitsSystemWindows="true">
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/imageView4"
                         android:layout_width="match_parent"
                         android:layout_height="202dp"
                         android:scaleType="centerCrop"
                         app:srcCompat="@drawable/image2" />
+
                     <TextView
                         android:id="@+id/res_title"
                         android:layout_width="match_parent"
@@ -41,6 +58,7 @@
                         android:textColor="#000000"
                         android:textSize="24sp"
                         android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/res_subtitle"
                         android:layout_width="match_parent"
@@ -55,21 +73,23 @@
                         android:textSize="15sp" />
                 </LinearLayout>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
+
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/white"
-                app:tabSelectedTextColor="#ED6868"
                 app:tabIndicatorColor="#ED6868"
-                tools:ignore="SpeakableTextPresentCheck">
-            </com.google.android.material.tabs.TabLayout>
+                app:tabSelectedTextColor="#ED6868"
+                tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.tabs.TabLayout>
+
             <FrameLayout
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
             </FrameLayout>
+
         </com.google.android.material.appbar.AppBarLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </LinearLayout>
