--- a/app/src/main/res/layout/res_info_fragment1.xml
+++ b/app/src/main/res/layout/res_info_fragment1.xml
@@ -8,43 +8,10 @@
     android:orientation="vertical"
     tools:context=".restaurant.info.res_info_fragment1">
 
-    <FrameLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff">
+        android:scrollbars="vertical"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                </androidx.recyclerview.widget.RecyclerView>
-
-            </ScrollView>
-
-        </LinearLayout>
-
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-            android:id="@+id/pay_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_margin="16dp"
-            android:backgroundTint="#ED6868"
-            android:fontFamily="@font/notosansbold"
-            android:text="주문하기"
-            android:textColor="#ffffff"
-            android:textSize="15dp"
-            app:icon="@drawable/add"
-            app:iconTint="@color/white" />
-
-    </FrameLayout>
 </FrameLayout>
