--- a/app/src/main/res/layout/res_info_fragment2.xml
+++ b/app/src/main/res/layout/res_info_fragment2.xml
@@ -5,153 +5,188 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     tools:context=".restaurant.info.Res_info_fragment2">
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <ScrollView
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView15"
+                android:orientation="vertical">
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/info_card"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="가게 소개"
-                    android:textColor="#000000"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/resinfo"
+                    android:layout_margin="8dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical" >
+                        <TextView
+                            android:id="@+id/textView15"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="가게 소개"
+                            android:textColor="#000000"
+                            android:fontFamily="@font/notosansbold"
+                            android:includeFontPadding="false"
+                            android:textSize="25dp" />
+                        <TextView
+                            android:id="@+id/resinfo"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="10dp"
+                            android:paddingBottom="10dp"
+                            android:textColor="#000000"
+                            android:textSize="16sp"
+                            android:fontFamily="@font/notosansregular"
+                            android:includeFontPadding="false"/>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/info_card2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:textColor="#000000"
-                    android:textSize="16sp" />
-
-                <View
-                    android:id="@+id/view2"
-                    android:layout_width="match_parent"
-                    android:layout_height="9dp"
-                    android:background="#F6B0B0"
-                    android:paddingTop="20dp" />
-
-                <TextView
-                    android:id="@+id/textView30"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:text="영업 정보"
-                    android:textColor="#000000"
-                    android:textSize="20sp" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView31"
-                        android:layout_width="wrap_content"
+                    android:layout_margin="8dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:paddingTop="8dp"
-                        android:text="상호명"
-                        android:textColor="#000000" />
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/textView30"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="영업 정보"
+                            android:textColor="#000000"
+                            android:textSize="25dp"
+                            android:fontFamily="@font/notosansbold"
+                            android:includeFontPadding="false"/>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/textView31"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="상호명"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
+                            <TextView
+                                android:id="@+id/resName"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="50dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/resName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="50dp"
-                        android:paddingTop="8dp"
-                        android:textColor="#000000" />
-                </LinearLayout>
+                            <TextView
+                                android:id="@+id/textView33"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="운영시간"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                            <TextView
+                                android:id="@+id/opening_hours"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="35dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView33"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
-                        android:text="운영시간"
-                        android:textColor="#000000" />
+                            <TextView
+                                android:id="@+id/textView34"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="위치"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false" />
 
-                    <TextView
-                        android:id="@+id/opening_hours"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="37dp"
-                        android:paddingTop="8dp"
-                        android:textColor="#000000" />
-                </LinearLayout>
+                            <TextView
+                                android:id="@+id/place"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="63dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
+                        </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/textView34"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
-                        android:text="위치"
-                        android:textColor="#000000" />
+                            <TextView
+                                android:id="@+id/textView37"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="전화번호"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
 
-                    <TextView
-                        android:id="@+id/place"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="63dp"
-                        android:paddingTop="8dp"
-                        android:textColor="#000000" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView37"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingTop="8dp"
-                        android:text="전화번호"
-                        android:textColor="#000000" />
-
-                    <TextView
-                        android:id="@+id/phonenum"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:paddingLeft="38dp"
-                        android:paddingTop="8dp"
-                        android:textColor="#000000" />
-                </LinearLayout>
-
-                <fragment
-                    android:id="@+id/shop_map"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="198dp" />
-
+                            <TextView
+                                android:id="@+id/phonenum"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingTop="10dp"
+                                android:paddingBottom="10dp"
+                                android:paddingLeft="35dp"
+                                android:textColor="#000000"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/notosansregular"
+                                android:includeFontPadding="false"/>
+                        </LinearLayout>
+                        <fragment
+                            android:id="@+id/shop_map"
+                            android:name="com.google.android.gms.maps.SupportMapFragment"
+                            android:layout_width="match_parent"
+                            android:layout_height="198dp" />
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
             </LinearLayout>
-        </ScrollView>
-
-    </LinearLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </FrameLayout>
