--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,6 +188,12 @@
                 android:textColor="#000000"
                 android:textSize="20sp" />
 
+            <Button
+                android:id="@+id/ai_test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="인공지능 테스트" />
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
