--- a/app/src/main/res/layout/restab_info_activity.xml
+++ b/app/src/main/res/layout/restab_info_activity.xml
@@ -42,7 +42,7 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
                     <TextView
-                        android:id="@+id/res_subtitle"
+                        android:id="@+id/res_tableNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="-10dp"
