메인화면 디자인에 주변식당 완료 리뷰사진 진행중2

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:statusBarColor" tools:ignore="DuplicateDefinition">#ED6868</item>
+        <item name="android:colorEdgeEffect">#ED6868</item>
     </style>
 
     <style name="Theme.LetsEat.NoActionBar">
