--- a/app/src/main/res/layout/activity_qr_rest.xml
+++ b/app/src/main/res/layout/activity_qr_rest.xml
@@ -128,6 +128,7 @@
                         android:fontFamily="@font/notosansbold"
                         android:includeFontPadding="false"
                         android:text="결제하기"
+                        android:id="@+id/orderButton"
                         android:background="@drawable/round_circle3"/>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
