--- a/app/src/main/res/menu/menumain.xml
+++ b/app/src/main/res/menu/menumain.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/search"
-        android:icon="@drawable/ic_baseline_search_24"
+        android:icon="@drawable/searchblack"
         android:title="search"
         android:iconTint="#ffffff"
         app:showAsAction="always" />
